versioned_docs/version-2.5.0/atrament-extras/extfunctions.md
---
sidebar_position: 4
---

# External functions

You can define game functions in JavaScript that can be called directly from Ink story.

To declare an external function, add this on top of your main story file:

```c title="story.ink"
EXTERNAL hello(name)
```

Then create a JS file in the `resources/externals` folder with the following content:

```js title="external_hello.js"
function external_function_Hello(name) {
  return `Hello, ${name}`;
}

export default {
  name: "hello", // this is the name of an external function
  external: external_function_Hello
}
```

See `resources/externals/example.js.txt` for more details.

## Fallbacks

By default, if a function defined with `EXTERNAL` is not found in the runtime environment, Ink fails with the "Missing function binding for external" error.

To avoid this, you can create an Ink function with the same name - it will act as a fallback and run if the external function is not found. To enable Ink fallbacks, add `#allow_external_function_fallbacks` global tag to your Ink script.

```
# allow_external_function_fallbacks
Your story begins here.
```

## Utility functions

File `resources/externals/utilities.js.txt` contains implementation of useful external functions. To use them in your Atrament project, do the following:
1. Rename this file to `utilities.js`.
2. Add lines with function definition, listed at the beginning of this file (for example, `EXTERNAL UPPERCASE(str)`) to your Ink script.
